Fix dialogs on mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,11 @@ button:active {
 	overflow-y: auto;
 	background-color: #0004; /* This actually sets the scrollbar color to whatever the browser wants for dark theme */
 }
+@media screen and (max-width: 400px) {
+	#right {
+		padding: 2px;
+	}
+}
 
 #soodocode-input {
 	font-size: larger;
@@ -147,7 +152,7 @@ button:active {
 	}
 	#soodocode-input {
 		margin: 0px;
-		width: 95%;
+		width: 100%;
 	}
 }
 button {
@@ -205,6 +210,11 @@ td, th {
 }
 .output-div.state-error {
 	--output-div-border-color: #F22;
+}
+@media screen and (max-width: 400px) {
+	.output-div {
+		max-width: unset;
+	}
 }
 
 .sth-number {
@@ -300,6 +310,19 @@ td, th {
 	background-color: #001;
 	color: white;
 }
+@media screen and (max-width: 400px) {
+	.dialog {
+		width: 100vw;
+		height: 100vh;
+		max-width: 100vw;
+		max-height: 100vh;
+		margin: 0;
+		padding: 5px;
+		position: relative;
+		background-color: #001;
+		color: white;
+	}	
+}
 .dialog::backdrop {
 	backdrop-filter: blur(2px) brightness(0.7);
 	/* background-color: salmon; */
@@ -318,6 +341,13 @@ td, th {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 	column-gap: 8px;
+}
+@media screen and (max-width: 430px) {
+	.settings-grid {
+		display: grid;
+		grid-template-columns: 1fr;
+		row-gap: 8px;
+	}
 }
 .settings-grid-item label {
 	font-size: 25px;
@@ -365,7 +395,12 @@ td, th {
 	padding-bottom: 5px;
 	font-size: 1.4em;
 	display: flex;
-	gap: 15px;
+	justify-content: space-between;
+}
+@media screen and (max-width: 450px) {
+	#files-dialog-select-line {
+		display: block;
+	}
 }
 #files-dialog-select {
 	font-size: 0.7em;
@@ -374,8 +409,8 @@ td, th {
 	min-width: 250px;
 	padding: 3px;
 }
-#files-dialog-select-line > .text-button:first-of-type {
-	margin-left: auto;
+#files-dialog-select-line-left, #files-dialog-select-line-right {
+	gap: 15px;
 }
 #files-dialog-contents {
 	font-size: larger;
@@ -417,6 +452,13 @@ a:active {
 div.horizontal {
 	display: flex;
 	gap: 10px;
+	align-items: center;
+}
+@media screen and (max-width: 400px) {
+	div.horizontal {
+		display: block;
+		/* Un-flex on small screens */
+	}
 }
 
 input[type="checkbox"] {
